--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "electrontest",
   "version": "0.1.0",
   "private": true,
+  "main": "src/main/main.js",
   "scripts": {
+    "start": "electron .",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -20,6 +22,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "electron": "^11.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
