--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "electrontest",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/main.js",
   "scripts": {
-    "start": "tsc -p tsconfig.electron.json && electron .",
-    "build-electron": "tsc -p tsconfig.electron.json",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-electron": "tsc -p tsconfig.electron.json",
+    "start": "tsc -p tsconfig.electron.json && electron ."
   },
+  "main": "dist/main.js",
   "dependencies": {
+    "@mdi/font": "^3.6.95",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -29,8 +32,11 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
