--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -31,7 +31,8 @@
     "outDir": "./dist"
   },
   "include": [
-    "src/main/*.ts",
+    "src/main/**/*.ts",
+    "src/common/**/*.ts"
   ],
   "exclude": [
     "node_modules"
